# hardcover-mcp

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/instructions/: copilot.instructions.md  python.instructions.md
.github/workflows/: ci.yml  publish.yml
src/hardcover_mcp/: client.py  server.py
src/hardcover_mcp/tools/: _validation.py  authors.py  books.py  editions.py  goals.py  journal.py  library.py  lists.py  prompts.py  publishers.py  series.py  stats.py  user.py
tests/: conftest.py
tests/integration/: test_goals_tools.py  test_journal_tools.py  test_read_tools.py  test_write_tools.py
tests/tools/: test_authors.py  test_books.py  test_editions.py  test_goals.py  test_journal.py  test_library.py  test_lists.py  test_prompts.py  test_publishers.py  test_series.py  test_stats.py  test_validation.py
